Fixing compilation issue with unhandled switch cases Adding new line to .gitignore dum_syms compilation output Fixed issue where convert_UTF.c was renamed to .cc but not correctly fixed in the Xcode project.

--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,7 @@ src/Makefile
 
 # Kabam: Removing ios build files
 src/client/ios/build
+src/tools/mac/dump_syms/build
 
 # Ignore directories gclient syncs.
 src/testing
